--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://Francischebo:<db_password>@ysn-website.wcjg1tt.mongodb.net/?retryWrites=true&w=majority&appName=ysn-website
 UPLOAD_DIR=uploads
+PORT=10000
