--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb+srv://Francischebo:<38998653Francis_>@ysn-website.wcjg1tt.mong
 UPLOAD_DIR=uploads
 PORT=10000
 API_URL=https://ysnwebsite.onrender.com
+NODE_ENV='production'
