--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://Francischebo:<38998653Francis_>@ysn-website.wcjg1tt.mongodb.net/?retryWrites=true&w=majority&appName=ysn-website
+MONGO_URI=mongodb+srv://Francischebo:<Fr_38998653>@ysn-website.wcjg1tt.mongodb.net/?retryWrites=true&w=majority&appName=ysn-website
 UPLOAD_DIR=uploads
 PORT=10000
 API_URL=https://ysnwebsite.onrender.com
