--- a/admin/package.json
+++ b/admin/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "admin",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.html",
-    "scripts": {
-        "build": "cp -r admin/* dist/",
-        "start": "serve -l 10000 admin"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "type": "commonjs"
+  "name": "admin",
+  "version": "1.0.0",
+  "description": "Admin dashboard static site",
+  "scripts": {
+    "build": "cp -r admin/* dist/",
+    "start": "serve -s admin -l 10000"
+  },
+  "keywords": [],
+  "author": "Francischebo",
+  "license": "ISC",
+  "devDependencies": {
+    "serve": "^14.1.3"
+  }
 }
