--- a/package.json
+++ b/package.json
@@ -1,36 +1,15 @@
 {
-    "dependencies": {
-        "gulp": "^5.0.1",
-        "gulp-csso": "^4.0.1",
-        "path-to-regexp": "^8.2.0",
-        "socket.io": "^4.8.1"
-    },
-    "devDependencies": {
-        "gulp-htmlmin": "^5.0.1",
-        "gulp-terser": "^2.1.0"
-    },
-    "name": "ysn-w",
-    "version": "1.0.0",
-    "description": "",
-    "main": "backend/server.js",
-    "scripts": {
-        "start": "node backend/server.js",
-        "build": "npm run build",
-        "dev": "nodemon backend/server.js"
-    },
-    "engines": {
-      "node": ">=18.18.0 <19.0.0"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "type": "commonjs",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Francischebo/ysnwebsite.git"
-    },
-    "bugs": {
-        "url": "https://github.com/Francischebo/ysnwebsite/issues"
-    },
-    "homepage": "https://github.com/Francischebo/ysnwebsite#readme"
+  "name": "admin",
+  "version": "1.0.0",
+  "description": "Admin dashboard static site",
+  "scripts": {
+    "build": "mkdir -p dist && cp -r admin/* dist/",
+    "start": "serve -s dist -l 10000"
+  },
+  "keywords": [],
+  "author": "Francischebo",
+  "license": "ISC",
+  "devDependencies": {
+    "serve": "^14.1.3"
+  }
 }
